--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,4 @@
 spring.application.name=LegalManagementSystem
 
-spring.datasource.url=jdbc:mysql://localhost:3306/legal_management_system
-spring.datasource.username=root
-spring.datasource.password=masina123
-
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=update
-
-springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.enabled=true
+spring.profiles.active=mysql
+spring.jpa.show-sql=true
