--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -3,8 +3,12 @@ spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.security.user.name=sa
+spring.security.user.password=
+spring.thymeleaf.security=false
 
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=never
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.mode=always
 spring.sql.init.platform=h2
