--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/legal_management_system
 spring.datasource.username=root
 spring.datasource.password=masina123
 
+logging.level.org.springframework.security=DEBUG
+
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 
