--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -7,6 +7,10 @@ spring.security.user.name=sa
 spring.security.user.password=
 spring.thymeleaf.security=false
 
+spring.cache.type=none
+spring.data.redis.host=unused
+spring.data.redis.port=0
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 
