--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,11 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/legal_management_system
+spring.datasource.url=jdbc:mysql://mysql:3306/legal_management_system
 spring.datasource.username=root
 spring.datasource.password=masina123
 
 logging.level.org.springframework.security=DEBUG
 
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.cache.interceptor.CacheInterceptor=TRACE
+logging.level.org.springframework.data.repository.config.RepositoryConfigurationExtensionSupport=WARN
+
+spring.data.redis.host=redis
+spring.data.redis.port=6379
 
 spring.sql.init.mode=never
 spring.sql.init.platform=mysql
